@@ -2,6 +2,8 @@
 -----
   * Remove the documentation about the non-working network configuration in Xen
     since that has been fixed meanwhile.
+  * Make it possible to exit the shell spawned in the initrd with 'exit'
+    to boot in the kdump system for debugging.
 
 0.7.5
 -----
