@@ -4,6 +4,8 @@
 	  print_ikconfig.
 	* Remove the documentation about the non-working network configuration
 	  in Xen since that has been fixed meanwhile.
+	* Make it possible to exit the shell spawned in the initrd with 'exit'
+	  to boot in the kdump system for debugging.
 
 2008-12-03  Bernhard Walle <bwalle@suse.de>
 
